macros/tests/ui/warnings.stderr
error: unused variable: `x`
 --> tests/ui/warnings.rs:5:27
  |
5 | pub async fn unused_param(x: i32) -> i32 {
  |                           ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
note: the lint level is defined here
 --> tests/ui/warnings.rs:1:9
  |
1 | #![deny(unused_variables)]
  |         ^^^^^^^^^^^^^^^^
